--- a/generateApp/config.ini
+++ b/generateApp/config.ini
@@ -2,7 +2,7 @@
     "PORT_CLIENT":9585,
     "PORT_ADMIN":9090,
     "SHOP_ID" : [],
-    "SHOP_NAME" : "tahaadou",
+    "SHOP_NAME" : "Literie d'amour",
     "CATEGORY" : [6],
 
     "DB_HOST": "localhost",
