--- a/generateApp/config.ini
+++ b/generateApp/config.ini
@@ -8,5 +8,5 @@
     "DB_HOST": "localhost",
     "DB_USERNAME": "root",
     "DB_PASSWORD": "",
-    "DB_NAME": "tahaadou"
+    "DB_NAME": "ecom_literiedamour"
 }
