--- a/generateApp/package.json
+++ b/generateApp/package.json
@@ -12,11 +12,11 @@
     "cors": "2.8.5",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "express-session": "1.17.3",
+    "express-session": "^1.17.3",
     "formidable": "2.1.1",
     "md5": "2.3.0",
     "mysql": "2.18.1",
-    "nodemailer": "6.9.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^3.0.1",
     "sharp": "^0.32.6"
   }
